--- a/src/packages.config
+++ b/src/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autodesk.DataExchange" version="5.2.4-beta" targetFramework="net48" />
+  <package id="Autodesk.DataExchange" version="6.2.0-release-local-v5" targetFramework="net48" />
   <package id="Autodesk.DataExchange.GeometryDefinitions" version="0.1.3" targetFramework="net48" />
-  <package id="Autodesk.DataExchange.UI" version="5.2.4-beta" targetFramework="net48" />
+  <package id="Autodesk.DataExchange.UI" version="6.2.0-release-local-v5" targetFramework="net48" />
   <package id="Autodesk.Extensions.Http.ForgeRetry" version="8.0.0" targetFramework="net48" />
   <package id="ForgeParameters-csharp_win_release_intel64_v140" version="3.0.6" targetFramework="net48" />
   <package id="ForgeUnits-csharp_win_release_intel64_v140" version="5.1.4" targetFramework="net48" />
   <package id="Google.Protobuf" version="3.19.4" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.12.1" targetFramework="net48" />
   <package id="IdentityModel" version="6.0.0" targetFramework="net48" />
   <package id="JsonSubTypes" version="2.0.1" targetFramework="net48" />
   <package id="JWT" version="9.0.3" targetFramework="net48" />
@@ -34,6 +35,8 @@
   <package id="MoreLinq.Source.MoreEnumerable.Batch" version="1.0.2" targetFramework="net48" developmentDependency="true" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="OneOf" version="3.0.271" targetFramework="net48" />
+  <package id="OneOf.SourceGenerator" version="3.0.271" targetFramework="net48" />
   <package id="PeterO.Cbor" version="4.5.2" targetFramework="net48" />
   <package id="PeterO.Numbers" version="1.8.2" targetFramework="net48" />
   <package id="PeterO.URIUtility" version="1.0.0" targetFramework="net48" />
