Updated app configuration keys in 'App.config'

--- a/src/App.config
+++ b/src/App.config
@@ -4,13 +4,16 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
 	</startup>
 	<appSettings>
-		<add key="AuthClientID" value="" />
-    <add key="AuthClientSecret" value="" />
-    <add key="AuthCallBack" value="" />
-    <add key="ApplicationDataPath" value="" />
-    <add key="ApplicationName" value="" />
-    <add key="LogLevel" value="" />
-  </appSettings>
+		<add key="AuthClientId" value="" />
+		<add key="AuthClientSecret" value="" />
+		<add key="AuthCallback" value="" />
+		<add key="ApplicationDataPath" value="" />
+		<add key="ConnectorName" value="" />
+		<add key="ConnectorVersion" value="" />
+		<add key="HostApplicationName" value="" />
+		<add key="HostApplicationVersion" value="" />
+		<add key="LogLevel" value="" />
+    </appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
