--- a/src/SampleConnector.csproj
+++ b/src/SampleConnector.csproj
@@ -481,6 +481,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="MainThreadInvoker.cs" />
     <Compile Include="SampleHostWindow.xaml.cs">
       <DependentUpon>SampleHostWindow.xaml</DependentUpon>
     </Compile>
@@ -516,11 +517,21 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <None Include="SampleInputFiles\ball.mtl" />
-    <None Include="SampleInputFiles\ball.obj" />
-    <None Include="SampleInputFiles\BasinAdvancedBrep.ifc" />
-    <None Include="SampleInputFiles\BuiltInParams.json" />
-    <None Include="SampleInputFiles\nist_ftc_09_asme1_rd.stp" />
+    <None Include="SampleInputFiles\ball.mtl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="SampleInputFiles\ball.obj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="SampleInputFiles\BasinAdvancedBrep.ifc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="SampleInputFiles\BuiltInParams.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="SampleInputFiles\nist_ftc_09_asme1_rd.stp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
