--- a/src/SampleConnector.csproj
+++ b/src/SampleConnector.csproj
@@ -59,59 +59,62 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autodesk.DataExchange, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.dll</HintPath>
+    <Reference Include="AngleSharp, Version=1.2.0.0, Culture=neutral, PublicKeyToken=e83494dcdc6d31ea, processorArchitecture=MSIL">
+      <HintPath>packages\AngleSharp.1.2.0\lib\net472\AngleSharp.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Authentication, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.Authentication.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.6.2.0-beta\lib\net48\Autodesk.DataExchange.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.BaseModels, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.BaseModels.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Authentication, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.6.2.0-beta\lib\net48\Autodesk.DataExchange.Authentication.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.ContractProvider, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.ContractProvider.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.BaseModels, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-beta\lib\net48\Autodesk.DataExchange.BaseModels.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Core, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.Core.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.ContractProvider, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.6.2.0-beta\lib\net48\Autodesk.DataExchange.ContractProvider.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Exceptions, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.Exceptions.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Core, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-beta\lib\net48\Autodesk.DataExchange.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Extensions.HostingProvider, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.Extensions.HostingProvider.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Exceptions, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-beta\lib\net48\Autodesk.DataExchange.Exceptions.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Extensions.Loader, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.Extensions.Loader.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Extensions.HostingProvider, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.6.2.0-beta\lib\net48\Autodesk.DataExchange.Extensions.HostingProvider.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Extensions.Logging.File, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.Extensions.Logging.File.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Extensions.Loader, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.6.2.0-beta\lib\net48\Autodesk.DataExchange.Extensions.Loader.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Extensions.Storage.File, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.Extensions.Storage.File.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Extensions.Logging.File, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.6.2.0-beta\lib\net48\Autodesk.DataExchange.Extensions.Logging.File.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Metrics, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.Metrics.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Extensions.Storage.File, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.6.2.0-beta\lib\net48\Autodesk.DataExchange.Extensions.Storage.File.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.OpenAPI, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.OpenAPI.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Metrics, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-beta\lib\net48\Autodesk.DataExchange.Metrics.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Resiliency, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.Resiliency.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.OpenAPI, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.6.2.0-beta\lib\net48\Autodesk.DataExchange.OpenAPI.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.Schemas, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.Schemas.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Resiliency, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-beta\lib\net48\Autodesk.DataExchange.Resiliency.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.SourceProvider, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.SourceProvider.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.Schemas, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.6.2.0-beta\lib\net48\Autodesk.DataExchange.Schemas.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.UI, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.UI.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.SourceProvider, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.6.2.0-beta\lib\net48\Autodesk.DataExchange.SourceProvider.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.UI.Bridge, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.UI.Bridge.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.UI, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-beta\lib\net48\Autodesk.DataExchange.UI.dll</HintPath>
     </Reference>
-    <Reference Include="Autodesk.DataExchange.UI.ViewModels, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-release-local-v5\lib\net48\Autodesk.DataExchange.UI.ViewModels.dll</HintPath>
+    <Reference Include="Autodesk.DataExchange.UI.Bridge, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-beta\lib\net48\Autodesk.DataExchange.UI.Bridge.dll</HintPath>
+    </Reference>
+    <Reference Include="Autodesk.DataExchange.UI.ViewModels, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\Autodesk.DataExchange.UI.6.2.0-beta\lib\net48\Autodesk.DataExchange.UI.ViewModels.dll</HintPath>
     </Reference>
     <Reference Include="Autodesk.Extensions.Http.ForgeRetry, Version=8.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Autodesk.Extensions.Http.ForgeRetry.8.0.0\lib\netstandard2.0\Autodesk.Extensions.Http.ForgeRetry.dll</HintPath>
@@ -126,11 +129,11 @@
     <Reference Include="CBOR, Version=4.5.2.0, Culture=neutral, PublicKeyToken=9cd62db60ea5554c, processorArchitecture=MSIL">
       <HintPath>packages\PeterO.Cbor.4.5.2\lib\net40\CBOR.dll</HintPath>
     </Reference>
-    <Reference Include="ForgeParametersCLR">
-      <HintPath>packages\ForgeParameters-csharp_win_release_intel64_v140.3.0.6\lib\net48\ForgeParametersCLR.dll</HintPath>
+    <Reference Include="ForgeParametersCLR, Version=4.3.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\ForgeParameters-csharp_win_release_intel64_v140.4.3.0\lib\net48\ForgeParametersCLR.dll</HintPath>
     </Reference>
-    <Reference Include="ForgeUnitsCLR">
-      <HintPath>packages\ForgeUnits-csharp_win_release_intel64_v140.5.1.4\lib\net48\ForgeUnitsCLR.dll</HintPath>
+    <Reference Include="ForgeUnitsCLR, Version=5.3.2.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>packages\ForgeUnits-csharp_win_release_intel64_v140.5.3.2\lib\net48\ForgeUnitsCLR.dll</HintPath>
     </Reference>
     <Reference Include="Google.Protobuf, Version=3.19.4.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
       <HintPath>packages\Google.Protobuf.3.19.4\lib\net45\Google.Protobuf.dll</HintPath>
@@ -160,13 +163,11 @@
       <HintPath>packages\Microsoft.Extensions.Configuration.3.1.17\lib\netstandard2.0\Microsoft.Extensions.Configuration.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Extensions.Configuration.Abstractions, Version=3.1.17.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
-      <HintPath>packages\Microsoft.Extensions.Configuration.Abstractions.3.1.17\lib\netstandard2.0\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Microsoft.Extensions.Configuration.Abstractions, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.Extensions.Configuration.Abstractions.6.0.0\lib\net461\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Extensions.Configuration.Binder, Version=3.1.17.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
-      <HintPath>packages\Microsoft.Extensions.Configuration.Binder.3.1.17\lib\netstandard2.0\Microsoft.Extensions.Configuration.Binder.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Microsoft.Extensions.Configuration.Binder, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.Extensions.Configuration.Binder.6.0.0\lib\net461\Microsoft.Extensions.Configuration.Binder.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Extensions.DependencyInjection, Version=7.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.Extensions.DependencyInjection.7.0.0\lib\net462\Microsoft.Extensions.DependencyInjection.dll</HintPath>
@@ -418,6 +419,9 @@
       <Private>True</Private>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Text.Encoding.CodePages, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Text.Encoding.CodePages.8.0.0\lib\net462\System.Text.Encoding.CodePages.dll</HintPath>
+    </Reference>
     <Reference Include="System.Text.Encodings.Web, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.Text.Encodings.Web.7.0.0\lib\net462\System.Text.Encodings.Web.dll</HintPath>
     </Reference>
@@ -581,13 +585,13 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\ForgeUnits-csharp_win_release_intel64_v140.5.1.4\build\ForgeUnits-csharp_win_release_intel64_v140.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\ForgeUnits-csharp_win_release_intel64_v140.5.1.4\build\ForgeUnits-csharp_win_release_intel64_v140.targets'))" />
-    <Error Condition="!Exists('packages\ForgeParameters-csharp_win_release_intel64_v140.3.0.6\build\ForgeParameters-csharp_win_release_intel64_v140.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\ForgeParameters-csharp_win_release_intel64_v140.3.0.6\build\ForgeParameters-csharp_win_release_intel64_v140.targets'))" />
-    <Error Condition="!Exists('packages\Autodesk.DataExchange.6.2.0-release-local-v5\build\Autodesk.DataExchange.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Autodesk.DataExchange.6.2.0-release-local-v5\build\Autodesk.DataExchange.targets'))" />
-    <Error Condition="!Exists('packages\Autodesk.DataExchange.UI.6.2.0-release-local-v5\build\Autodesk.DataExchange.UI.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Autodesk.DataExchange.UI.6.2.0-release-local-v5\build\Autodesk.DataExchange.UI.targets'))" />
+    <Error Condition="!Exists('packages\ForgeUnits-csharp_win_release_intel64_v140.5.3.2\build\ForgeUnits-csharp_win_release_intel64_v140.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\ForgeUnits-csharp_win_release_intel64_v140.5.3.2\build\ForgeUnits-csharp_win_release_intel64_v140.targets'))" />
+    <Error Condition="!Exists('packages\ForgeParameters-csharp_win_release_intel64_v140.4.3.0\build\ForgeParameters-csharp_win_release_intel64_v140.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\ForgeParameters-csharp_win_release_intel64_v140.4.3.0\build\ForgeParameters-csharp_win_release_intel64_v140.targets'))" />
+    <Error Condition="!Exists('packages\Autodesk.DataExchange.6.2.0-beta\build\Autodesk.DataExchange.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Autodesk.DataExchange.6.2.0-beta\build\Autodesk.DataExchange.targets'))" />
+    <Error Condition="!Exists('packages\Autodesk.DataExchange.UI.6.2.0-beta\build\Autodesk.DataExchange.UI.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Autodesk.DataExchange.UI.6.2.0-beta\build\Autodesk.DataExchange.UI.targets'))" />
   </Target>
-  <Import Project="packages\ForgeUnits-csharp_win_release_intel64_v140.5.1.4\build\ForgeUnits-csharp_win_release_intel64_v140.targets" Condition="Exists('packages\ForgeUnits-csharp_win_release_intel64_v140.5.1.4\build\ForgeUnits-csharp_win_release_intel64_v140.targets')" />
-  <Import Project="packages\ForgeParameters-csharp_win_release_intel64_v140.3.0.6\build\ForgeParameters-csharp_win_release_intel64_v140.targets" Condition="Exists('packages\ForgeParameters-csharp_win_release_intel64_v140.3.0.6\build\ForgeParameters-csharp_win_release_intel64_v140.targets')" />
-  <Import Project="packages\Autodesk.DataExchange.6.2.0-release-local-v5\build\Autodesk.DataExchange.targets" Condition="Exists('packages\Autodesk.DataExchange.6.2.0-release-local-v5\build\Autodesk.DataExchange.targets')" />
-  <Import Project="packages\Autodesk.DataExchange.UI.6.2.0-release-local-v5\build\Autodesk.DataExchange.UI.targets" Condition="Exists('packages\Autodesk.DataExchange.UI.6.2.0-release-local-v5\build\Autodesk.DataExchange.UI.targets')" />
+  <Import Project="packages\ForgeUnits-csharp_win_release_intel64_v140.5.3.2\build\ForgeUnits-csharp_win_release_intel64_v140.targets" Condition="Exists('packages\ForgeUnits-csharp_win_release_intel64_v140.5.3.2\build\ForgeUnits-csharp_win_release_intel64_v140.targets')" />
+  <Import Project="packages\ForgeParameters-csharp_win_release_intel64_v140.4.3.0\build\ForgeParameters-csharp_win_release_intel64_v140.targets" Condition="Exists('packages\ForgeParameters-csharp_win_release_intel64_v140.4.3.0\build\ForgeParameters-csharp_win_release_intel64_v140.targets')" />
+  <Import Project="packages\Autodesk.DataExchange.6.2.0-beta\build\Autodesk.DataExchange.targets" Condition="Exists('packages\Autodesk.DataExchange.6.2.0-beta\build\Autodesk.DataExchange.targets')" />
+  <Import Project="packages\Autodesk.DataExchange.UI.6.2.0-beta\build\Autodesk.DataExchange.UI.targets" Condition="Exists('packages\Autodesk.DataExchange.UI.6.2.0-beta\build\Autodesk.DataExchange.UI.targets')" />
 </Project>
