--- a/test/SampleConnectorUnitTests/packages.config
+++ b/test/SampleConnectorUnitTests/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autodesk.DataExchange" version="6.2.0-release-local-v5" targetFramework="net48" />
+  <package id="AngleSharp" version="1.2.0" targetFramework="net48" />
+  <package id="Autodesk.DataExchange" version="6.2.0-beta" targetFramework="net48" />
   <package id="Autodesk.DataExchange.GeometryDefinitions" version="0.1.3" targetFramework="net48" />
-  <package id="Autodesk.DataExchange.UI" version="6.2.0-release-local-v5" targetFramework="net48" />
+  <package id="Autodesk.DataExchange.UI" version="6.2.0-beta" targetFramework="net48" />
   <package id="Autodesk.Extensions.Http.ForgeRetry" version="8.0.0" targetFramework="net48" />
-  <package id="ForgeParameters-csharp_win_release_intel64_v140" version="3.0.6" targetFramework="net48" />
-  <package id="ForgeUnits-csharp_win_release_intel64_v140" version="5.1.4" targetFramework="net48" />
+  <package id="ForgeParameters-csharp_win_release_intel64_v140" version="4.3.0" targetFramework="net48" />
+  <package id="ForgeUnits-csharp_win_release_intel64_v140" version="5.3.2" targetFramework="net48" />
   <package id="Google.Protobuf" version="3.19.4" targetFramework="net48" />
   <package id="HtmlAgilityPack" version="1.12.1" targetFramework="net48" />
   <package id="IdentityModel" version="5.0.1" targetFramework="net48" />
@@ -15,8 +16,8 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.17" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.17" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.17" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Http" version="6.0.0" targetFramework="net48" />
@@ -101,6 +102,7 @@
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="8.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net48" />
   <package id="System.Text.Json" version="7.0.3" targetFramework="net48" />
