Adding AngleSharp reference

--- a/test/SampleConnectorUnitTests/SampleConnectorUnitTests.csproj
+++ b/test/SampleConnectorUnitTests/SampleConnectorUnitTests.csproj
@@ -57,6 +57,9 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AngleSharp, Version=1.2.0.0, Culture=neutral, PublicKeyToken=e83494dcdc6d31ea, processorArchitecture=MSIL">
+      <HintPath>..\..\src\packages\AngleSharp.1.2.0\lib\net472\AngleSharp.dll</HintPath>
+    </Reference>
     <Reference Include="Autodesk.DataExchange, Version=6.2.0.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\..\src\packages\Autodesk.DataExchange.6.2.0-beta\lib\net48\Autodesk.DataExchange.dll</HintPath>
     </Reference>
