--- a/src/packages.config
+++ b/src/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngleSharp" version="1.2.0" targetFramework="net48" />
   <package id="Autodesk.DataExchange" version="6.2.0-beta" targetFramework="net48" />
   <package id="Autodesk.DataExchange.GeometryDefinitions" version="0.1.3" targetFramework="net48" />
   <package id="Autodesk.DataExchange.UI" version="6.2.0-beta" targetFramework="net48" />
